[gd_scene load_steps=4 format=3 uid="uid://b87keu24557qu"]

[ext_resource type="Script" path="res://scripts/battle/ui/LevelUp/LevelUpUI.gd" id="1_lhxo6"]
[ext_resource type="Theme" uid="uid://dcn0qri7xl5ii" path="res://themes/gameui_theme.tres" id="2_ql13v"]
[ext_resource type="FontFile" uid="uid://banvpavkfhevp" path="res://resource/fonts/connection/ConnectionBold.otf" id="3_hxxv4"]

[node name="LevelUpUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lhxo6")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.47451)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelUpTitle" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.5
offset_top = 20.0
offset_right = 96.5
offset_bottom = 68.0
grow_horizontal = 2
theme = ExtResource("2_ql13v")
theme_override_fonts/font = ExtResource("3_hxxv4")
theme_override_font_sizes/font_size = 45
text = "LEVEL UP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelUpItems" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -142.5
offset_bottom = 142.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1
